# rust-wasm-image-editor

./: .dockerignore  .eslintrc.cjs  .eslintrc.json  .eslintrc.json.old  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  Dockerfile.old  README.md  cypress.config.ts  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.husky/: pre-push
.storybook/: main.ts
cypress/e2e/1-getting-started/: todo.cy.js
cypress/support/: component.ts
hooks/: pre-push
src/: App.tsx  index.css  styles.css  utils.ts  wasm.worker.mt.ts  wasm.worker.st.ts  wasm.worker.ts
src/components/: App.tsx  CanvasTest.tsx  ColourPicker.tsx  CommandTypeBadge.tsx  ContextMenu.tsx  Cursor.tsx  CustomSpotlightAction.tsx  Dropzone.tsx  History.tsx  KeyboardShortcut.cy.tsx  KeyboardShortcut.stories.tsx  KeyboardShortcut.tsx  Layers.tsx  Main.tsx  Pane.tsx  PaneSection.tsx  PaneTitle.tsx  RectangleSelect.module.scss  RectangleSelect.stories.tsx  RectangleSelect.tsx  Resizable.tsx  Sortable.tsx
src/components/Layers/: Layer.tsx  LayerLabel.tsx  LayerSettings.tsx  LayerThumbnail.tsx  index.tsx
src/context/: Provider.tsx  activeProject.tsx  app.tsx  canvas.tsx  commands.tsx  index.ts  layers.tsx  settings.tsx  tabs.tsx  wasm.tsx
src/context/tools/: bucket_fill.ts  bucket_fill.tsx  ellipse_select.tsx  eye_dropper.ts  eye_dropper.tsx  fuzzy_select.tsx  index.tsx  move_layer.tsx  paintbrush.ts  paintbrush.tsx  rectangle_select.tsx  utils.ts
src/hooks/: index.ts
src/main/: Main.jsx  Main.tsx
src/pages/: _app.tsx  canvas_test.tsx  index.tsx
src/settings/: NavBar.tsx  Settings.tsx
src/settings/tabs/: KeyboardShortcuts.tsx  UserInterface.tsx
src/stories/: CanvasTest.stories.tsx  Header.stories.ts  Introduction.mdx  Page.stories.ts  Sortable.stories.tsx  layers.stories.tsx
src/ui/: ProjectTabBar.tsx  Ui.tsx  Workspace.tsx
src/ui/Footer/: Footer.tsx
src/ui/Header/: Header.tsx  MenuBarItem.tsx  MenuBarItems.tsx
src/ui/LeftPane/: LeftPane.tsx  index.ts
src/ui/Modals/: CreateNewProject.tsx  ResizeCanvas.tsx  index.tsx
src/ui/RightPane/: RightPane.tsx  index.ts
src/ui/TabBar/: TabBar.tsx
src/ui/settings/: NavBar.tsx  Settings.tsx
src/utils/: api_demo.ts  index.ts
src/utils/wasm/: index.ts  wasm.worker.mt.ts  wasm.worker.st.ts  wrap-api.ts
src/workspace/: Workspace.old2  Workspace.tsx  Workspace_old.js
wasm/: Cargo.toml
wasm/benches/: bench.rs  benchmarks.rs
wasm/docker_dummy/: lib.rs
wasm/src/: app.rs  lib.rs  utils.rs
wasm/src/api/: canvas.rs  mod.rs  serialize.rs
wasm/src/app/: canvas.rs  colour.rs  history.rs  layer.rs  mod.rs  pixel_buffer.rs  project.rs  project_controller.rs  selection.rs  utils.rs  workspace.rs
wasm/src/app/buffer/: buffer.rs  buffer_iterator.rs  mod.rs  rgba_buffer.rs
wasm/src/app/commands/: command.rs  create_layer.rs  crop_layer.rs  crop_layer_to_content.rs  delete_layer.rs  fill_selection.rs  generate_checkerboard.rs  import_image_as_layer.rs  mod.rs  rename_layer.rs  reorder_layers.rs  resize_canvas.rs  select_layer.rs  set_layer_locked.rs  set_layer_position.rs  set_layer_visible.rs  set_name.rs
wasm/src/app/commands/selection/: fuzzy_select.rs  mod.rs  select_all.rs  select_ellipse.rs  select_inverse.rs  select_none.rs  select_rect.rs
wasm/tests/: integration_test.rs  selection.rs
(+8 files in other folders)
