[package]
name = "wasm"
version = "0.1.0"
authors = ["Hector Bennett <hectorbennett@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.24.5"
indexmap = "1.9.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook"]
