[package]
name = "wasm"
version = "0.1.0"
authors = ["Hector Bennett <hectorbennett@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

################
# Dependencies #
################

[dependencies]
cfg-if = "1.0.0"
image = "0.24.5"
indexmap = "1.9.2"
rand = "0.8.5"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
serde_json = "1.0.95"

[dependencies.postcard]
version = "1.0.4"
features = ["alloc"]

[dependencies.tsify]
version = "0.4.3"
features = ["js"]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "js"]


[dependencies.web-sys]
version = "0.3.61"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'ImageData',
    'Window',
    'console',
]

####################
# Dev Dependencies #
####################

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook"]
