[package]
name = "wasm"
version = "0.1.0"
authors = ["Hector Bennett <hectorbennett@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


################
# Dependencies #
################

[dependencies]
cfg-if = "1.0.0"
image = "0.24.6"
indexmap = "1.9.3"
rand = "0.8.5"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.74"
serde_json = "1.0.96"

[dependencies.postcard]
version = "1.0.4"
features = ["alloc"]

[dependencies.tsify]
version = "0.4.5"
features = ["js"]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.serde]
version = "1.0.163"
features = ["derive"]
default-features = false

[dependencies.uuid]
version = "1.3.3"
features = ["v4", "js"]

[dependencies.web-sys]
version = "0.3.63"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'ImageData',
    'Window',
    'console',
]

[dependencies.rayon]
version = "1.5"
optional = true

[dependencies.wasm-bindgen-rayon]
version = "1"
optional = true


####################
# Dev Dependencies #
####################

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
criterion = "0.5.1"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
